--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ if(NOT DEFINED FLIGHT_SW_DIR)
   set(FLIGHT_SW_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../FlightSW)
 endif()
 if(NOT DEFINED C2A_NAME)
-  set(C2A_NAME "c2a-aobc")
+  set(C2A_NAME "c2a-aobc-hogesat")
 endif()
 
 ## Directory path for ini files
