FINE_THREE_AXIS : fix sagitta.ini

--- a/data/initialize_files/satellite.ini
+++ b/data/initialize_files/satellite.ini
@@ -19,7 +19,7 @@ initial_angular_velocity_b_rad_s(2) = 0.0
 initial_quaternion_i2b(0) = 0.5
 initial_quaternion_i2b(1) = 0.5
 initial_quaternion_i2b(2) = 0.5
-initial_quaternion_i2b(3) = 0.5
+initial_quaternion_i2b(3) = -0.5
 
 // Initial torque at body frame [Nm]
 // Note: The initial torque added just for the first propagation step
@@ -58,7 +58,7 @@ logging = ENABLE
 // RELATIVE : Relative dynamics (for formation flying simulation)
 // KEPLER   : Kepler orbit propagation without disturbances and thruster maneuver
 // ENCKE    : Encke orbit propagation with disturbances and thruster maneuver
-propagate_mode = SGP4
+propagate_mode = RK4
 
 // Orbit initialize mode for RK4, KEPLER, and ENCKE
 // DEFAULT             : Use default initialize method (RK4 and ENCKE use pos/vel, KEPLER uses init_mode_kepler)
